<resources>
    <string name="app_name">ILikeToMovieMovieMobile</string>
    <string name="button_httprequest">Send HTTP Request</string>
    <string name="http_response">~</string>
    <string name="userLogin">Username</string>
    <string name="userPass">Password</string>
    <string name="login">Login</string>
    <string name="display_user">username</string>
    <string name="display_password">password</string>
    <string name="search_bar">Enter Search Criteria</string>
    <string name="button_search">Search</string>
</resources>
